2020-11-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/*/*.c: Replace u_log_message macro with geda_log:

        * base/gschem_parsecmd.c
        * src/guile/g_funcs.c
        * src/guile/g_util.c
        * src/object/o_complex.c
        * src/object/o_slot.c

2020-11-14 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations.
    * po/de.po: Update German translations.
    * po/el.po: Update Greek translations.
    * po/es.po: Update Spanish translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/nl.po: Update Dutch translations.

2020-11-07 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations.
    * po/de.po: Update German translations.
    * po/el.po: Update Greek translations.
    * po/es.po: Update Spanish translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/nl.po: Update Dutch translations.

2020-10-31 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations.
    * po/de.po: Update German translations.
    * po/el.po: Update Greek translations.
    * po/es.po: Update Spanish translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/nl.po: Update Dutch translations.

2020-10-24 Wiley E. Hill <wileyhill@gmail.com>

    * po/fi.po: Update Finnish translations
    * po/ml.po: Updated Malayalam translations.
    * po/pl.po: Update Polish translations.
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.
    * po/ru.po: Update Russian translations.
    * po/sl.po: Update Slovenian translations.