@@ -1,3 +1,9 @@
+2020-11-17 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/*/*.c: Replace u_log_message macro with geda_log:
+
+        * src/x/x_autonumber.c
+
 2020-11-16 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/*/*.c: Replace u_log_message macro with geda_log:
